<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- titles -->
    <string name="app_name">Escape from the Aliens in Outer Space</string>
    <string name="choose_players_title">Select number of players</string>
    <string name="choose_map_title">Select a map</string>
    <string name="action_settings">Settings</string>

    <!-- choosing players screen -->
    <string name="choose_players_text">Select number of players: </string>
    <string name="choose_players_button_text">Select map</string>

    <string-array name="players_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string name="title_activity_game_play">GamePlay</string>
    <string name="next_turn_button">></string>
    <string name="title_activity_choose_map">Choose a map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- halo color array labels -->
    <string-array name="halo_color_labels">
        <item>H</item>
        <item>A</item>
        <item>\?</item>
        <item>X</item>
    </string-array>

    <!-- welcome screen -->
    <string name="title_activity_home_screen">Escape from the Aliens in Outer Space</string>
    <string name="welcome">This is where a logo will go</string>
    <string name="logo_text_top">ESCAPE</string>
    <string name="logo_text_middle">FROM THE ALIENS</string>
    <string name="logo_text_bottom">IN OUTER SPACE</string>
    <string name="welcome_button_start">new game</string>
    <string name="welcome_button_resume">resume game</string>
    <string name="welcome_button_rules">help</string>
    <string name="welcome_button_create_map">map creator</string>
    <string name="welcome_button_settings">settings</string>

    <!-- help screen -->
    <string name="title_activity_help">Help</string>
    <string name="help_welcome">This app is to be used in conjunction with the Escape from the Aliens
        in Outer Space board game.</string>
    <string name="help_players_title">Choosing players</string>
    <string name="help_players_text">• Select the number of players using the dropdown\n
            • Change the names of players by selecting a text box and changing the name.\n
        </string>
    <string name="help_map_title">Choosing a map</string>
    <string name="help_map_text">Just touch one\n</string>
    <string name="help_gameplay_title">Gameplay</string>
    <string name="help_gameplay_text">
        • The number in the lower right corner of the screen represents the current round in the game.\n
        • Turn navigation is in the upper right corner\n
        • The player with the yellow outline is the player whose turn it is.\n
        • Touch a sector to add a move indicator to it for the current player and turn.\n
        • Touching the hexagon again will turn the move indicator into a square. You can use square to
            indicate moves of which you are certain.\n
        • Touch the sector a third time to remove the move from that turn and player.\n
        • Touch the right arrow to increment the player turn. When the last player has gone, touching the right
            arrow will increment the round. This option automatically skips dead players.\n
        • Touch the pencil (edit) icon to display the Edit Turn panel.\n
        • The number that displays in blue represents the current turn that you are editing.\n
        • Touch the right arrow to increment the turn that you are editing. If you are editing the current
            game turn, touching the right arrow will start a new turn.\n
        • Touch the left arrow to edit a previous turn.\n
        • Touch the current turn number to return to editing the current turn.\n
        • The player with the yellow outline is the one whose turn you are editing.\n
        • Touch a different player box to change the currently selected player.\n
        • Touch the pencil again to remove the Edit Turn panel and return to moving through player turns.\n
        • Touch and hold any player\'s colored square to add an indicator for human vs. alien vs. dead. This will
            add a red halo around the player box for humans, and a green halo for aliens.\n
        • If you choose \'dead\' (X), that player\'s player box will be grayed out, and his/her turn will be skipped. You will
            not be able to add moves for that player, although you can touch and hold his/her square to change the
            player status back to human, alien, or uncertain.\n
        • Pinch to zoom and drag to scroll.\n</string>
    <string name="title_activity_map_creator">MapCreatorActivity</string>
    <string name="hello_world">Hello world!</string>


    <!-- map creation help-->
    <string name="help_map_creation_text">• Touch blank sectors once to add a safe sector, and twice
        to add an unsafe sector.\n
        • Touch and hold a special sector (alien start, human start, escape hatch) to allow dragging
        and dropping.\n
        • Touch the check icon to enter a name and save the map to the My  Maps section.
    </string>
</resources>
