<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jrobins.jrobins.escape2.HomeScreenActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.33">
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.66"
            android:orientation="vertical"
            android:padding="0dp">

            <View
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:background="@color/logo_color"/>
            <!--
            <ImageView
                android:layout_width="match_parent"
                android:background="@android:color/white"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"

                android:src="@mipmap/logo"/>
            -->
            <com.jrobins.jrobins.escape2.FontFitTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logo_text_top"
                android:gravity="center"
                android:textColor="@color/logo_color"
                android:padding="0dp"
                android:includeFontPadding="false"
                android:textStyle="bold"/>

            <com.jrobins.jrobins.escape2.FontFitTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logo_text_middle"
                android:gravity="center"
                android:textColor="@color/logo_color"

                android:textStyle="bold"/>
            <com.jrobins.jrobins.escape2.FontFitTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logo_text_bottom"
                android:gravity="center"
                android:textColor="@color/logo_color"
                android:textStyle="bold"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:background="@color/logo_color"/>
                <!-- 70% Width End-->

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.33">
        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_button_start"
        android:id="@+id/start"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_button_resume"
        android:id="@+id/resume"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        />

    <Button

        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_button_create_map"
        android:id="@+id/create"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        />
    <Button

        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_button_rules"
        android:id="@+id/rules"
        android:layout_gravity="center_horizontal"

        />





</LinearLayout>
